# a-compressed-world

./: .gitignore  README.md  download.py  prepare.py  program.md  pyproject.toml  record.py  train.py
.claude/: settings.local.json
records/: 20260506-184353.json  20260506-190449-nncp.json  20260506-204038-paris-nncp.json  20260506-212349-monaco-full-nncp.json  README.md  classical_floors.md  results.tsv  traces.ipynb
records/tile_dumps/: monaco_z15_tile25.hex.txt  monaco_z15_tile25.json  monaco_z15_tile25.textproto.txt
tools/: inspect_data.py
